# coolbar

./: Cargo.toml  README.org  flake.nix
nix/: overlay.nix
nix/pkgs/gtk4-layer-shell/: default.nix
src/: args.rs  config.rs  globals.rs  icons.rs  macros.rs  main.rs  styles.scss  util.rs
src/components/: iconbutton.rs  mod.rs  power.rs  razer_mouse.rs  time.rs  volume.rs  workspaces.rs
src/data/: mod.rs  wayland_compositor.rs
src/reducers/: hyprland.rs  mod.rs  openrazer.rs  pulseaudio.rs
src/widgets/panel/: imp.rs  mod.rs
