[package]
name = "coolbar"
repository = "https://github.com/fr33zing/coolbar"
authors = ["fr33zing"]
license = "GPL-3.0-or-later"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
encode_unicode = "1.0.0"
glib = "0.17.9"
gtk4-layer-shell = "0.0.3"
hex = "0.4.3"
libpulse-binding = "2.27.1"
once_cell = "1.17.1"
pango = "0.17.4"
relm4 = { version = "0.6.0-beta.1", features = [ "macros" ] }
relm4-components = "0.6.0-beta.1"
rsass = "0.27.0"
rx = "0.0.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["time", "process", "io-util", "net", "macros", "parking_lot"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wildflower = "0.3.0"

[patch.crates-io]
relm4 = { git = 'https://github.com/Relm4/Relm4.git' }

[dependencies.gtk]
package = "gtk4"
version = "0.6.6"
features = [
    "v4_10" # Needed for WidgetExt::color()
]
